--- a/pertemuan 7 3 22/style.css
+++ b/pertemuan 7 3 22/style.css
@@ -51,7 +51,5 @@ span {
 }
 
 body {
-    background-image: url(maxresdefault.jpg);
-    background-repeat: no-repeat;
-    background-color: ;
+    background: white url(maxresdefault.jpg) no-repeat right top fixed;
 }
